--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
  "BeerstoreDatabaseSettings": {
     "BeerCollectionName": "beer",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "beershop"
   },
   "Logging": {
