--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "MONGODB_URL": "mongodb://localhost:27017"
+        "MONGODB_URL": "mongodb://localhost:27017",
+        "PIPEDREAM_URL": "https://31301cce0d381d6c9338a006d3d31044.m.pipedream.net"
       }
     },
     "MongoApi": {
