--- a/prometheus/docker-compose-prometheus.yml
+++ b/prometheus/docker-compose-prometheus.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   mongoapi:
-    image: "sebchevre/mongoapi:1.5"
+    image: "sebchevre/mongoapi:latest"
     ports:
       - "9998:80"
       - "9999:443"
@@ -28,8 +28,7 @@ services:
       - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    networks:
-      - dotnetcorepromgrafana
+    
 
   grafana: 
     image: grafana/grafana
@@ -39,5 +38,4 @@ services:
     restart: always
     ports:
       - 3000:3000
-    networks:
-      - dotnetcorepromgrafana
+    
