--- a/prometheus/docker-compose-prometheus.yml
+++ b/prometheus/docker-compose-prometheus.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   mongoapi:
     container_name: "mongoapi"
-    image: "sebchevre/mongoapi:1.71"
+    image: "sebchevre/mongoapi:latest"
     ports:
       - "9998:80"
       - "9999:443"
@@ -21,6 +21,8 @@ services:
     image: "mongo"
     ports: 
       - "27017:27017"
+    volumes:
+      -   mongo_data:/data/db
 
   prometheus:
     image: prom/prometheus
@@ -39,4 +41,14 @@ services:
     restart: always
     ports:
       - 3000:3000
+    user: "472"
+    volumes:
+       - grafana_data:/var/lib/grafana
+       #- $PWD/conf/grafana:/etc/grafana
+       #- $PWD/logs/grafana:/var/log/grafana
+       #- $PWD/data/grafana/provisioning:/etc/grafana/provisioning
+volumes:
+  grafana_data:
+  mongo_data:
+   # external: true     existant cree à l exterieur du container
     
