--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,5 +9,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConsulConfig":{
+    "Host":"localhost:8500",
+    "ServiceName":"mongoapi",
+    "ServiceId":"mongoapi-dev"
   }
 }
