--- a/k8s/mongoapi-service.yaml
+++ b/k8s/mongoapi-service.yaml
@@ -11,11 +11,11 @@ metadata:
   name: mongoapi
 spec:
   ports:
-  - name: "9998"
-    port: 9998
+  - name: "http"
+    port: 80
     targetPort: 80
-  - name: "9999"
-    port: 9999
+  - name: "https"
+    port: 443
     targetPort: 443
   selector:
     io.kompose.service: mongoapi
