--- a/k8s/grafana-deployment.yaml
+++ b/k8s/grafana-deployment.yaml
@@ -1,10 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: mongoapi-env
   annotations:
-    kompose.cmd: C:\dev\kompose\kompose.exe --file .\docker-compose-prometheus.yml
-      convert
-    kompose.version: 1.16.0 (0c01309)
   creationTimestamp: null
   labels:
     io.kompose.service: grafana
