--- a/k8s/grafana-service.yaml
+++ b/k8s/grafana-service.yaml
@@ -1,20 +1,17 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  annotations:
-    kompose.cmd: C:\dev\kompose\kompose.exe --file .\docker-compose-prometheus.yml
-      convert
-    kompose.version: 1.16.0 (0c01309)
-  creationTimestamp: null
+  name: grafana-service
+  namespace: mongoapi-env
   labels:
-    io.kompose.service: grafana
-  name: grafana
+    service: grafana
 spec:
   ports:
-  - name: "3000"
-    port: 3000
-    targetPort: 3000
+    - protocol: TCP
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
   selector:
-    io.kompose.service: grafana
+    app: grafana
 status:
   loadBalancer: {}
