--- a/k8s/mongoapi-deployment.yaml
+++ b/k8s/mongoapi-deployment.yaml
@@ -3,12 +3,9 @@ kind: Deployment
 metadata:
   namespace: mongoapi-env
   annotations:
-    kompose.cmd: C:\dev\kompose\kompose.exe --file .\docker-compose-prometheus.yml
-      convert
-    kompose.version: 1.16.0 (0c01309)
   creationTimestamp: null
   labels:
-    io.kompose.service: mongoapi
+    app: mongoapi
   name: mongoapi
 spec:
   replicas: 1
