--- a/k8s/mongoapi-ingress.yaml
+++ b/k8s/mongoapi-ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: mongodbapi-ingress
+  name: mongoapi-ingress
   annotations:
     kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
-  - host: mongodbapi.sebchevre.home
+  - host: k8s.mongoapi.org
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: mongo-api-node-port-service
+            name: mongoapi-service
             port: 
-              number: 443
+              number: 80
