--- a/k8s/mongoapi-service.yaml
+++ b/k8s/mongoapi-service.yaml
@@ -1,20 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: mongoapi-env
   annotations:
-    kompose.cmd: C:\dev\kompose\kompose.exe --file .\docker-compose-prometheus.yml
-      convert
-    kompose.version: 1.16.0 (0c01309)
   creationTimestamp: null
   labels:
-    io.kompose.service: mongoapi
-  name: mongoapi
+    service: mongoapi
+  name: mongoapi-service
 spec:
   ports:
-  - name: "9998"
-    port: 9998
+  - name: "80"
+    port: 80
     targetPort: 80
   selector:
-    io.kompose.service: mongoapi
+    app: mongoapi
 status:
   loadBalancer: {}
+
