--- a/k8s/mongodb-persistentvolumeclaim.yaml
+++ b/k8s/mongodb-persistentvolumeclaim.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: mongoapi-env
   creationTimestamp: null
   labels:
-    io.kompose.service: mongo-data
+    pvc: mongo-data
   name: mongo-data
 spec:
   accessModes:
