--- a/k8s/grafana-service.yaml
+++ b/k8s/grafana-service.yaml
@@ -1,7 +1,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: grafana-service
+  name: grafana
   namespace: mongoapi-env
   labels:
     service: grafana
