--- a/k8s/mongoapi-service.yaml
+++ b/k8s/mongoapi-service.yaml
@@ -6,7 +6,7 @@ metadata:
   creationTimestamp: null
   labels:
     service: mongoapi
-  name: mongoapi-service
+  name: mongoapi
 spec:
   ports:
   - protocol: TCP
