--- a/k8s/mongoapi-deployment.yaml
+++ b/k8s/mongoapi-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - name: MONGODB_URL
           value: mongodb://mongodb:27017
         - name: PIPEDREAM_URL
-          value: pipedream-external
+          value: http://pipedream-external
         image: sebchevre/mongoapi:1.8.3-http
         name: mongoapi
         ports:
